--- a/css/corners.css
+++ b/css/corners.css
@@ -1,6 +1,24 @@
 body{
 	font-family: 'Arima Madurai', cursive;
 }
+ /* large devices */
+@media (min-width: 1200px){
+
+ p.one{
+width: 25%;
+}
+
+p.two{
+width: 25%;
+}
+
+p.three{
+width: 25%;
+}
+
+}
+
+
 
 a:hover {
 	color: #ff554c;
@@ -20,7 +38,7 @@ p.one{
  margin: 3px;
  margin-top: 1px;
  background-color: green;
- position: relative;
+ position: absolute;
  left: 120px;
  width: 250px;
 }
@@ -29,9 +47,9 @@ p.two{
 	border: 5px inset blue;
 	margin: 50px;
 	background-color: blue;
-	position: fixed;
-	top: 190px;
-	left: 300px;
+	position: absolute;
+	top: 100px;
+	left: 290px;
 	width: 250px;
 }
 
@@ -39,8 +57,8 @@ p.three{
 	border: 5px outset yellow;
 	margin: 80px;
 	background-color: yellow;
-	position: relative;
-	top: 30px;
+	position: absolute;
+	top: 150px;
 	left: 480px;
 	width: 250px;
 }
