--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,3 +1,165 @@
+/* Large screens */
+@media (min-width: 1200px) {
+	[class*='lg']{
+		
+		
+font-family: 'Raleway', sans-serif;
+text-align: center;
+
+		
+	}
+
+	.col-lg-1 {
+		width: 8.33%;
+	}
+
+	.col-lg-2 {
+		width: 16.66%;
+	}
+
+	.col-lg-3 {
+		width: 25%;
+	}
+
+	.col-lg-4 {
+		width: 33.33%;
+	}
+
+	.col-lg-5 {
+		width: 41.66%;
+	}
+
+	.col-lg-6 {
+		width: 50%;
+	}
+
+	.col-lg-7 {
+		width: 58.33%;
+	}
+
+	.col-lg-8 {
+		width: 66.66%;
+	}
+
+	.col-lg-9 {
+		width: 74.99%;
+	}
+
+	.col-lg-10 {
+		width: 83.33%;
+	}
+
+	.col-lg-11 {
+		width: 91.66%;
+	}
+
+	.col-lg-12 {
+		width: 100%;
+	}
+}
+/* Medium Screens */
+@media (min-width: 950px) and (max-width: 1199px){
+	[class*="md"]{
+		font-family: 'Raleway', sans-serif;
+
+	}
+
+	.col-md-1 {
+		width: 8.33%;
+	}
+
+	.col-md-2 {
+		width: 16.66%;
+	}
+
+	.col-md-3 {
+		width: 25%;
+	}
+
+	.col-md-4 {
+		width: 33.33%;
+	}
+
+	.col-md-5 {
+		width: 41.66%;
+	}
+
+	.col-md-6 {
+		width: 50%;
+	}
+
+	.col-md-7 {
+		width: 58.33%;
+	}
+
+	.col-md-8 {
+		width: 66.66%;
+	}
+
+	.col-md-9 {
+		width: 74.99%;
+	}
+
+	.col-md-10 {
+		width: 83.33%;
+	}
+
+	.col-md-11 {
+		width: 91.66%;
+	}
+
+	.col-md-12 {
+		width: 100%;
+	}
+}
+
+*{
+	font-size: 30px;
+	font-color: blue;
+}
+
+/*Small Screens*/
+@media (min-width: 375px) and (max-width: 414px){
+	[class*="sm"]
+
+	.col-sm-1 {
+		width: 8.33%;
+	}
+	.col-sm-2 {
+		width: 16.66%;
+	}
+	.col-sm-3{
+		width: 25%;
+	}
+	.col-sm-4{
+		width: 33.33%;
+	}
+	.col-sm-5{
+		width: 41.66%;
+	}
+	.col-sm-6{
+		width: 50%;
+	}
+	.col-sm-7{
+		width: 58.33%;
+	}
+	.col-sm-8{
+		width: 66.66%;
+	}
+	.col-sm-9{
+		width: 74.99%;
+	}
+	.col-sm-10{
+		width: 83.33%;
+	}
+	.col-sm-11{
+		width: 91.66%;
+	}
+	.col-sm-12{
+		width: 100%;
+	}
+}
+
 div.pigglemaster {
 	font-family: 'Arima Madurai', cursive;
 	font-size: 20px;
@@ -40,7 +202,7 @@ div.box2{
 	width: 100px;
 	height: 130px;
 	float: left;
-	margin: 100px 300px 100px;
+	margin: 100px 200px 100px;
 	padding: 5px;
 	
 }
@@ -53,6 +215,77 @@ div.box3{
 	float: left;
 	margin: 10px;
 	padding: 5px;
+}
+
+div.h2{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	float: left;
+	margin: 10px 30px 70px 60px;
+	padding: 5px;
+	text-align: center;
+}
+
+div.doop{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	float: left;
+	padding: 5px;
+	text-align: center;
+	margin: 110px 30px;
+	
+}
+
+div.sloop{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	float: left;
+	margin: 10px 30px 20px 50px;
+	padding: 5px;
+	text-align: center;
+	
+}
+
+div.pasta{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	margin-left: 100;
+	float: left;
+	margin: 10px 30px 20px 50px;
+	padding: 5px;
+	text-align: center;
+}
+
+div.salads{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	margin-left: 100;
+	float: left;
+	margin: 10px 30px 20px 50px;
+	padding: 5px;
+	text-align: center;
+}
+
+div.sandwiches{
+	border-style: solid;
+	position: relative;
+	width: 200px;
+	height: 500px;
+	margin-left: 100;
+	float: left;
+	margin: 10px 30px 20px 50px;
+	padding: 5px;
+	text-align: center;
 }
 
 .img1{
