--- a/css/Index.css
+++ b/css/Index.css
@@ -12,11 +12,13 @@ h1{
 	font-family: 'Raleway', sans-serif;
 	color: #d2ff70;
 	height: 200px;
-	width: 1435px;
-	max-width: 1429px;
+	width: 1440px;
+	max-width: 1500px;
 	min-width: 50%;
 	border-width: 5px;
+
 }
+
 
 /* Large screens */
 @media (min-width: 1200px) {
@@ -26,7 +28,7 @@ h1{
 font-family: 'Raleway', sans-serif;
 position: relative;
 text-align: center;
-left: 500px;
+left: 550px;
 		
 	}
 
@@ -135,6 +137,56 @@ left: 500px;
 		width: 100%;
 	}
 }
+
+/* small screen */
+
+	.col-sm-1{
+		width: 8.33%;
+	}
+
+	.col-sm-2 {
+		width: 16.66%;
+	}
+
+	.col-sm-3 {
+		width: 25%;
+	}
+
+	.col-sm-4 {
+		width: 33.33%;
+	}
+
+	.col-sm-5 {
+		width: 41.66%;
+	}
+
+	.col-sm-6 {
+		width: 50%;
+	}
+
+	.col-sm-7 {
+		width: 58.33%;
+	}
+
+	.col-sm-8 {
+		width: 66.66%;
+	}
+
+	.col-sm-9 {
+		width: 74.99%;
+	}
+
+	.col-sm-10 {
+		width: 83.33%;
+	}
+
+	.col-sm-11 {
+		width: 91.66%;
+	}
+
+	.col-sm-12 {
+		width: 100%;
+	}
 
 *{
 	font-size: 30px;
